# sdl3_cmake_template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: shader_config.h.in
include/: context.h  geometry.h  shaders.h
shaders/: color.frag.hlsl  position_color.vert.hlsl
src/: main.c  shaders.c
